# haisos

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/skills/auto-code-review/: SKILL.md
.claude/skills/auto-investigate-tests/: SKILL.md
.claude/skills/begin/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review-llm-protocol/: SKILL.md
.claude/skills/code-review-logs/: SKILL.md
.claude/skills/code-review-performance/: SKILL.md
.claude/skills/code-review-quality/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/end/: SKILL.md
.claude/skills/fetch/: SKILL.md
.claude/skills/investigate-tests/: SKILL.md
.claude/skills/llm-cache/: SKILL.md
.github/scripts/: build-linux.sh  build-wasm.sh  build-windows.bat  package-for-ci.sh  run-tests-linux.sh  run-tests-windows.bat
.github/workflows/: ci.yml
interfaces/: IAgent.h  IConsole.h  IFactory.h  IFileSystem.h  IFilesystem.h  IHTTPClient.h  IHaisosEngine.h  ILLMCommunicator.h  ITool.h  IToolFactory.h  IVirtualConsole.h  JsonSendReceiveCallbacks.h  SystemCallbacks.h
scripts/: base_branch.sh  build_linux_on_linux.sh  build_wasm_on_linux.sh  build_windows_on_windows.bat  build_windows_on_wsl.sh  pack.bat  pack.sh  test_linux.sh  test_windows.bat
scripts/internal/: smoke_tests.txt  test.js
src/components/Agent/: Agent.cpp  Agent.h  AgentMessageBuffer.cpp  AgentMessageBuffer.h  CLAUDE.md  CMakeLists.txt
src/components/Console/: CLAUDE.md  CMakeLists.txt  Console.cpp  Console.h  VirtualConsole.cpp  VirtualConsole.h
src/components/Factory/: CLAUDE.md  CMakeLists.txt  Factory.cpp  Factory.h
src/components/Filesystem/: CLAUDE.md  CMakeLists.txt  Filesystem.cpp  Filesystem.h
src/components/Filesystem/linux/: PosixFilesystem.cpp
src/components/Filesystem/windows/: WindowsFilesystem.cpp
src/components/HTTPClient/: CLAUDE.md  CMakeLists.txt  HTTPClient.h
src/components/HTTPClient/linux/: CurlHTTPClient.cpp  CurlHTTPClient.h
src/components/HTTPClient/wasm/: FetchHTTPClient.cpp  FetchHTTPClient.h
src/components/HTTPClient/windows/: WinHTTPClient.cpp  WinHTTPClient.h
src/components/HaisosEngine/: CLAUDE.md  CMakeLists.txt  HaisosEngine.cpp  HaisosEngine.h
src/components/LLMCommunicator/: CLAUDE.md  CMakeLists.txt  LLMCommunicator.cpp  LLMCommunicator.h
src/components/ToolFactory/: CLAUDE.md  CMakeLists.txt  ToolFactory.cpp  ToolFactory.h
src/haisos/: CMakeLists.txt  CliParser.cpp  CliParser.h  main.cpp
src/tools/agent_list_running/: AgentListRunningTool.cpp  AgentListRunningTool.h  CLAUDE.md  CMakeLists.txt
src/tools/agent_query/: AgentQueryTool.cpp  AgentQueryTool.h  CLAUDE.md  CMakeLists.txt
src/tools/agent_start/: AgentStartTool.cpp  AgentStartTool.h  CLAUDE.md  CMakeLists.txt
src/tools/agent_stop/: AgentStopTool.cpp  AgentStopTool.h  CLAUDE.md  CMakeLists.txt
src/tools/agent_wait_to_finish/: AgentWaitToFinishTool.cpp  AgentWaitToFinishTool.h  CLAUDE.md  CMakeLists.txt
src/tools/get_current_date_time/: CLAUDE.md  CMakeLists.txt  GetCurrentDateTime.cpp  GetCurrentDateTime.h
tests/: CMakeLists.txt
tests/haisos/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/Agent.PostAndProcess.integrationtest/: AgentPostAndProcessTest.cpp  CMakeLists.txt
tests/integration/AgentListRunning.integrationtest/: AgentListRunningTest.cpp  CMakeLists.txt
tests/integration/AgentQuery.integrationtest/: AgentQueryTest.cpp  CMakeLists.txt
tests/integration/AgentStart.integrationtest/: AgentStartTest.cpp  CMakeLists.txt
tests/integration/AgentStop.integrationtest/: AgentStopTest.cpp  CMakeLists.txt
tests/integration/AgentWaitToFinish.integrationtest/: AgentWaitToFinishTest.cpp  CMakeLists.txt
tests/integration/Call.get_current_date_time.integrationtest/: CMakeLists.txt  CallGetCurrentDateTimeTest.cpp
tests/integration/HTTPClient.GetRequest.integrationtest/: CMakeLists.txt  HTTPClientGetRequestTest.cpp
tests/integration/HTTPClient.OllamaLocalEndpoint.integrationtest/: CMakeLists.txt  HTTPClientOllamaLocalEndpointTest.cpp
tests/integration/HTTPClient.PostRequest.integrationtest/: CMakeLists.txt  HTTPClientPostRequestTest.cpp
tests/integration/LLMCommunicator.2Plus3.integrationtest/: CMakeLists.txt  LLMCommunicator2Plus3Test.cpp
tests/integration/LLMCommunicator.HandlesErrorGracefully.integrationtest/: CMakeLists.txt  LLMCommunicatorHandlesErrorGracefullyTest.cpp
tests/integration/RawCall.get_current_date_time.integrationtest/: CMakeLists.txt  get_current_date_timeTest.cpp
tests/integration/RunWithSimplePrompt.integrationtest/: CMakeLists.txt  RunWithSimplePromptTest.cpp
tests/integration/helpers/: IntegrationTestHelpers.h  IntegrationTestLogCapture.h
tests/mocks/: MockAgent.h  MockConsole.h  MockFilesystem.h  MockHTTPClient.h  MockLLMCommunicator.h
tests/unit/: CMakeLists.txt
tests/unit/components/Agent.unittests/: AgentTest.cpp  CMakeLists.txt
tests/unit/components/Console.unittests/: CMakeLists.txt  ConsoleTest.cpp  VirtualConsoleTest.cpp
tests/unit/components/Factory.unittests/: CMakeLists.txt  FactoryTest.cpp
tests/unit/components/Filesystem.unittests/: CMakeLists.txt  FilesystemTest.cpp
tests/unit/components/HaisosEngine.unittests/: CMakeLists.txt  HaisosEngineTest.cpp
tests/unit/components/LLMCommunicator.unittests/: CMakeLists.txt  LLMCommunicatorTest.cpp
tests/unit/components/ToolFactory.unittests/: CMakeLists.txt  ToolFactoryTest.cpp
tests/unit/haisos/: CMakeLists.txt  CliParserTest.cpp
tests/unit/tools/agent_list_running.unittests/: AgentListRunningToolTest.cpp  CMakeLists.txt
tests/unit/tools/agent_query.unittests/: AgentQueryToolTest.cpp  CMakeLists.txt
tests/unit/tools/agent_start.unittests/: AgentStartToolTest.cpp  CMakeLists.txt
tests/unit/tools/agent_stop.unittests/: AgentStopToolTest.cpp  CMakeLists.txt
tests/unit/tools/agent_wait_to_finish.unittests/: AgentWaitToFinishToolTest.cpp  CMakeLists.txt
tests/unit/tools/get_current_date_time.unittests/: CMakeLists.txt  GetCurrentDateTimeTest.cpp
var/: ideas.txt
(+32 files in other folders)
