add_subdirectory(RunWithSimplePrompt.integrationtest)
add_subdirectory(RawCall.get_current_date_time.integrationtest)
add_subdirectory(Call.get_current_date_time.integrationtest)
add_subdirectory(Agent.PostAndProcess.integrationtest)
add_subdirectory(HTTPClient.GetRequest.integrationtest)
add_subdirectory(HTTPClient.PostRequest.integrationtest)
add_subdirectory(HTTPClient.OllamaLocalEndpoint.integrationtest)
add_subdirectory(LLMCommunicator.2Plus3.integrationtest)
add_subdirectory(LLMCommunicator.HandlesErrorGracefully.integrationtest)
add_subdirectory(AgentStart.integrationtest)
add_subdirectory(AgentWaitToFinish.integrationtest)
add_subdirectory(AgentQuery.integrationtest)
add_subdirectory(AgentStop.integrationtest)
add_subdirectory(AgentListRunning.integrationtest)
