add_subdirectory(components/Console.unittests)
add_subdirectory(components/Factory.unittests)
add_subdirectory(components/HaisosEngine.unittests)
add_subdirectory(components/Agent.unittests)
add_subdirectory(components/LLMCommunicator.unittests)
add_subdirectory(components/ToolFactory.unittests)
add_subdirectory(tools/get_current_date_time.unittests)
add_subdirectory(tools/agent_start.unittests)
add_subdirectory(tools/agent_wait_to_finish.unittests)
add_subdirectory(tools/agent_query.unittests)
add_subdirectory(tools/agent_stop.unittests)
add_subdirectory(tools/agent_list_running.unittests)
add_subdirectory(haisos)
