add_executable(LLMCommunicator.2Plus3.integrationtest LLMCommunicator2Plus3Test.cpp)
target_link_libraries(LLMCommunicator.2Plus3.integrationtest PRIVATE LLMCommunicator HTTPClient Logger nlohmann_json::nlohmann_json)
target_compile_features(LLMCommunicator.2Plus3.integrationtest PRIVATE cxx_std_17)
