add_executable(LLMComm.HandlesError.integrationtest LLMCommunicatorHandlesErrorGracefullyTest.cpp)
target_link_libraries(LLMComm.HandlesError.integrationtest PRIVATE LLMCommunicator HTTPClient Logger nlohmann_json::nlohmann_json)
target_compile_features(LLMComm.HandlesError.integrationtest PRIVATE cxx_std_17)
set_target_properties(LLMComm.HandlesError.integrationtest PROPERTIES OUTPUT_NAME LLMCommunicator.HandlesErrorGracefully.integrationtest)
